--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="white-header">
             <div class="customer-side">
                 <div class="logo-container"> <img src="https://post.lt/themes/posttheme/images/logo.svg" alt="logo">
-                <a href="#">Privatiems</a>
-                <a href="#">Verslui</a>
+                    <a href="#">Privatiems</a>
+                    <a href="#">Verslui</a>
                 </div>
             </div>
             <div class="tools-side">
@@ -45,6 +45,25 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="hero"></section>
+        <section class="news">
+            <h2>Naujienos</h2>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./people.png" alt="people" />
+                    </div>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+                        voluptates.
+                    </p>
+                    <a href="#">Plačiau ></a>
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
