--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -60,21 +61,103 @@
                     </p>
                     <a href="#">Plačiau ></a>
                 </div>
-            
-            <div class="card">
-                <div class="card-image">
-                    <img src="./people.png" alt="people" />
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./people.png" alt="people" />
+                    </div>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+                        voluptates.
+                    </p>
+                    <a href="#">Plačiau ></a>
                 </div>
-                <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
-                    voluptates.
-                </p>
-                <a href="#">Plačiau ></a>
-            </div>
+                <div class="card mini">
+                    <div class="card-image">
+                        <img src="./people.png" alt="people" />
+                    </div>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+                        voluptates.
+                    </p>
+                    <a href="#">Plačiau ></a>
+                </div>
+                <div class="card mini">
+
+                    <div class="card-image">
+
+                        <img src="./people.png" alt="people" />
+
+                    </div>
+
+                    <p class="card-text">
+
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+
+                        voluptates.
+
+                    </p>
+
+                    <a href="#">Plačiau ></a>
+
+                </div>
+                <div class="card mini">
+
+                    <div class="card-image">
+
+                        <img src="./people.png" alt="people" />
+
+                    </div>
+
+                    <p class="card-text">
+
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+
+                        voluptates.
+
+                    </p>
+
+                    <a href="#">Plačiau ></a>
+
+                </div>
+
             </div>
 
         </section>
     </main>
+    <footer>
+        <nav class="footer-navigation">     
+           <div class="nav-column">
+               <h3>Įrankiai</h3>
+               <ul>
+                   <li><a href="#">Siuntų sekimas</a></li>
+               </ul>
+           </div>
+           <div class="nav-column">
+            <h3>Paslaugos</h3>
+            <ul>
+                <li><a href="#">Siuntų sekimas</a></li>
+            </ul>
+        </div>
+        <div class="nav-column">
+            <h3>Pagalba</h3>
+            <ul>
+                <li><a href="#">Siuntų sekimas</a></li>
+            </ul>
+        </div>
+        <div class="nav-column">
+            <h3>Lietuvos paštas</h3>
+            <ul>
+                <li><a href="#">Siuntų sekimas</a></li>
+            </ul>
+        </div>
+        </nav>
+
+        <div class="social">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
